--- a/.github/workflows/mygfwlist.yml
+++ b/.github/workflows/mygfwlist.yml
@@ -27,7 +27,7 @@ jobs:
             git config --global user.email t@tanst.net
             git config --global user.name tanst
             git add .
-            git commit -m "$(date -d "+8 hour" "+%Y%m%d%H%M%S")" -a
+            git commit -m "$(date -d "+8 hour" "+%Y%m%d%H%M%S")" -a || exit 0
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
